Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-463

THRIFT-236 breaks thrift_spec generation for python

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • None
    • 0.1
    • Python - Compiler
    • None
    • Patch Available

    Description

      We need to use get_sorted_members for thrift_spec generation.

      Attachments

        1. thrift-spec-sorted-members.patch
          0.6 kB
          Alexander Shigin
        2. thrift-spec-sorted-members-2.patch
          1 kB
          Alexander Shigin

        Activity

          People

            shigin Alexander Shigin
            shigin Alexander Shigin
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: