THRIFT-463. python: Fix thrift_spec ordering bug from r760201

git-svn-id: https://svn.apache.org/repos/asf/incubator/thrift/trunk@769123 13f79535-47bb-0310-9956-ffa450edef68